Thu Sep 16 09:25:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
          Removed Service_Templates.h

Thu Sep 16 09:08:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/Send_Large_Msg/server.cpp:
        * protocols/tests/HTBP/ping/client.cpp:
          Added missing includes

Wed Sep 15 12:45:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Auto_Event.h:
        * ace/OS_NS_arpa_inet.inl:
        * ace/OS_NS_arpa_inet.cpp:
        * ace/OS_NS_errno.cpp:
        * ace/OS_NS_fcntl.cpp:
        * ace/OS_NS_math.cpp:
        * ace/OS_NS_pwd.inl:
        * ace/OS_NS_pwd.cpp:
        * ace/OS_NS_regex.inl:
        * ace/OS_NS_regex.cpp:
        * ace/OS_NS_signal.cpp:
        * ace/OS_NS_sys_resource.cpp:
        * ace/OS_NS_sys_wait.inl:
        * ace/OS_NS_wctype.inl:
        * ace/OS_NS_wctype.cpp:
        * ace/config-tandem.h:
        * ace/os_include/os_pthread.h:
        * ace/os_include/os_signal.h:
        * ace/os_include/sys/os_resource.h:
        * ace/os_include/sys/os_socket.h:
          Small cleanup and layout changes

Wed Sep 15 12:31:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/Reactor_Tests/server.cpp:
        * protocols/tests/HTBP/Send_Recv_Tests/server.cpp:
        * protocols/tests/HTBP/ping/server.cpp:
          Fixed solaris compile problems

Wed Sep 15 09:33:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:
          Zapped removed files

        * docs/svn/config:
          Added another file type

Wed Sep 15 07:51:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Removed invalid comma, thanks to Frank Preischl
          <Frank dot Preischl at ids dot de> for reporting this and Olli Savia
          for correcting my initial patch
