@@ -74,7 +74,7 @@ namespace ACE
               * @brief
               *
               */
-#if (_MSC_VER < 1500)
+#if (_MSC_VER < 1600)
               class ACE_INET_Export INetConnectionKey
 #else
               class INetConnectionKey
